docs/0.20/_sources/api/gammapy.irf.Background2D.rst.txt
Background2D
============

.. currentmodule:: gammapy.irf

.. autoclass:: Background2D
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Background2D.axes
      ~Background2D.data
      ~Background2D.default_interp_kwargs
      ~Background2D.default_unit
      ~Background2D.fov_alignment
      ~Background2D.has_offset_axis
      ~Background2D.is_pointlike
      ~Background2D.quantity
      ~Background2D.required_axes
      ~Background2D.tag
      ~Background2D.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~Background2D.cumsum
      ~Background2D.evaluate
      ~Background2D.from_hdulist
      ~Background2D.from_table
      ~Background2D.integral
      ~Background2D.integrate_log_log
      ~Background2D.interp_missing_data
      ~Background2D.is_allclose
      ~Background2D.normalize
      ~Background2D.pad
      ~Background2D.peek
      ~Background2D.plot
      ~Background2D.plot_at_energy
      ~Background2D.plot_energy_dependence
      ~Background2D.plot_offset_dependence
      ~Background2D.plot_spectrum
      ~Background2D.read
      ~Background2D.to_3d
      ~Background2D.to_hdulist
      ~Background2D.to_table
      ~Background2D.to_table_hdu
      ~Background2D.to_unit
      ~Background2D.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: axes
   .. autoattribute:: data
   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: default_unit
   .. autoattribute:: fov_alignment
   .. autoattribute:: has_offset_axis
   .. autoattribute:: is_pointlike
   .. autoattribute:: quantity
   .. autoattribute:: required_axes
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: cumsum
   .. automethod:: evaluate
   .. automethod:: from_hdulist
   .. automethod:: from_table
   .. automethod:: integral
   .. automethod:: integrate_log_log
   .. automethod:: interp_missing_data
   .. automethod:: is_allclose
   .. automethod:: normalize
   .. automethod:: pad
   .. automethod:: peek
   .. automethod:: plot
   .. automethod:: plot_at_energy
   .. automethod:: plot_energy_dependence
   .. automethod:: plot_offset_dependence
   .. automethod:: plot_spectrum
   .. automethod:: read
   .. automethod:: to_3d
   .. automethod:: to_hdulist
   .. automethod:: to_table
   .. automethod:: to_table_hdu
   .. automethod:: to_unit
   .. automethod:: write
